# django_rest_tutorial

./: pyproject.toml
tutorial/: db.sqlite3
tutorial/snippets/: admin.py  serializers.py  urls.py  views.py
tutorial/snippets/migrations/: 0001_initial.py
tutorial/tutorial/: settings.py  urls.py
